# sauron-histogram

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
src/: lib.rs
src/assets/: style.css
